stylesheets/about/aboutMembers.css
#about-members-section {
  display: grid;
  width: 90vw;
  margin: 5vw;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-auto-rows: 25vw;
  grid-gap: 5vw;
}

div.member-container {
  font-weight: 300;
  position: relative;
  background-color: aliceblue;
  overflow: hidden;
  text-align: center;
}
div.member-container>img.member-image {
  position: absolute;
  left: -100%;
  right: -100%;
  top: -100%;
  bottom: -100%;
  margin: auto;
  width: auto;
  min-width: 110%;
  height: 100%;
  min-height: 110%;
  background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8));
  z-index: 1;
  transition: all 0.5s ease;
}
div.member-container>div.member-name {
  font-size: 2vw;
  position: absolute;
  width: 100%;
  left: 0;
  bottom: 0;
  background-color: white;
  z-index: 3;
  padding-top: 2px;
  padding-bottom: 2px;
}

div.member-container>div.member-overlay-view {
  visibility: hidden;
  position: absolute;
  left: 0;
  top: 0;
  width: 0;
  height: 100%;
  background-color: rgba(255,255,255,0.8);
  z-index: 2;
  overflow: scroll;
  transition: all 0.5s ease;
  opacity: 0;
}

div.member-container:hover>div.member-overlay-view {
  visibility: visible;
  width: 100%;
  opacity: 1;
}
div.member-container:hover>img.member-image {
  filter: blur(5px);
}

div.member-overlay-view>div.member-role {
  padding-top: 10px;
  font-weight: 600;
}
div.member-overlay-view>div.member-grade {
  font-weight: 400;
  padding-bottom: 20px;
}
div.member-overlay-view>div.member-description {
  padding-top: 40px;
  text-align: left;
  padding-left: 10px;
  padding-right: 10px;
}

div.member-overlay-view>.member-item {
  font-size: 1.5vw;
  font-weight: 300;
}

